<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="208dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ScrollView
                android:id="@+id/scrollView1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/scrollView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_weight="7">

                <EditText
                    android:id="@+id/calculation_workspace_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="2dp"
                    android:background="@android:color/transparent"
                    android:editable="false"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:singleLine="false"
                    android:textSize="24sp" />
            </ScrollView>

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scrollView1"
                app:layout_constraintVertical_weight="3">

                <TextView
                    android:id="@+id/calculation_output_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="2dp"
                    android:textAlignment="textEnd"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/resizebar"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resizebar"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp">

            <LinearLayout
                android:id="@+id/linearlayout1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/key_lparen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/key_lparen"
                    android:textSize="42dp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/key_rparen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/key_rparen"
                    android:textSize="42dp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/key_reset"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/key_reset"
                    android:textSize="42dp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/key_bksp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/key_bksp"
                    android:textSize="42dp"
                    app:cornerRadius="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearlayout1">

                <Button
                    android:id="@+id/key_7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/key_7"
                    android:textSize="42dp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/key_8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/key_8"
                    android:textSize="42dp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/key_9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/key_9"
                    android:textSize="42dp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/key_add"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/key_add"
                    android:textSize="42dp"
                    app:cornerRadius="10dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/linearLayout4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <Button
                    android:id="@+id/key_4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/key_4"
                    android:textSize="42dp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/key_5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/key_5"
                    android:textSize="42dp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/key_6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/key_6"
                    android:textSize="42dp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/key_mul"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/key_mul"
                    android:textSize="42dp"
                    app:cornerRadius="10dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/linearLayout5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                <Button
                    android:id="@+id/key_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/key_1"
                    android:textSize="42dp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/key_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/key_2"
                    android:textSize="42dp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/key_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/key_3"
                    android:textSize="42dp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/key_div"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/key_div"
                    android:textSize="42dp"
                    app:cornerRadius="10dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                <Button
                    android:id="@+id/key_dot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/key_dot"
                    android:textSize="42dp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/key_0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/key_0"
                    android:textSize="42dp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/key_sub"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/key_sub"
                    android:textSize="42dp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/key_eq"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/key_eq"
                    android:textSize="42dp"
                    app:cornerRadius="10dp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
